--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,42 +1,271 @@
 <!doctype html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- <meta charset="utf-8"> -->
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
 
-{% seo %}
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href='../_sass/jekyll-theme-leap-day.css' >
+      <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.0.min.js" integrity="sha256-RTQy8VOmNlT6b2PIRur37p6JEBZUE7o8wPgMvu18MC4=" crossorigin="anonymous"></script>
-    <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
+    <script src="../assets/js/main.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script> -->
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity="sha256-3Jy/GbSLrg0o9y5Z5n1uw0qxZECH7C6OQpVBgNFYa0g=" crossorigin="anonymous"></script>
     <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">*/ -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    ​<header>
+             <h1 style="color:#fff"> Techforce Platform Documentation</h1>
+           </header>
   </head>
-  <body>
+  <body data-spy="scroll" data-target="#myScrollspy" data-offset="5">
+  <div class="container-fluid" style="display:block">
 
-      <header>
-        <h1> Techforce Platform Documentation</h1>
-      </header>
+  <div class="row">
+    <nav class="col-sm-3 col-4" id="myScrollspy">
+      <ul class="nav nav-pills flex-column side">
+        <li>
+          <a href="#home-Submenu" data-toggle="collapse"  class="heading">Getting Started 	</a>
+          <ul  class="collapse list-unstyled" id="home-Submenu">
+            <li><a class="child" href="#compatiblity">OS Compatibility</a></li>
+            <li><a class="child" href="#Minimum">Minimum Hardware Requirements</a></li>
+            <li><a class="child" href="#Installing RPA Studio">Installing RPA Studio</a></li>
+            <li >
+              <a href="#home" data-toggle="collapse" class="child" style="margin-left:20px;">Architecture Overview & Deployment Models	</a>
+              <ul  class="collapse list-unstyled" id="home">
+                <li><a class="child" style="margin-left:20px;" href="#section41">Enterprise Model</a></li>
+                <li><a class="child" style="margin-left:20px;" href="#section42">Hybrid Model</a></li>
+              </ul>
+            </li>
+            <li><a class="child" href="#section42">Building a Basic Bot</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#homeSubmenu" data-toggle="collapse"  class="heading">Release Notes	</a>
+          <ul  class="collapse list-unstyled" id="homeSubmenu">
+            <li><a class="child" href="#section4">Feature Comparison</a></li>
+            <li><a class="child" href="#section42">Version:</a></li>
+          </ul>
+        </li>
+        <li >
+          <a href="#homeSub" data-toggle="collapse" class="heading">Installation Instructions	</a>
+          <ul  class="collapse list-unstyled" id="homeSub">
+            <li><a class="child" href="#RPA Studio & Worker/Runtime">RPA Studio & Worker/Runtime</a></li>
+            <li><a class="child" href="#section">Installing Techforce OCR</a></li>
+            <li><a class="child" href="#section">Enterprise Manager Console</a></li>
+            <li><a class="child" href="#section">Installing Orchestrator (Windows Os)</a></li>
+            <li><a class="child" href="#section">Installing Orchestrator in Producer Machine</a></li>
+            <li><a class="child" href="#section">Start the servers</a></li>
+            <li><a class="child" href="#section">Configure Database</a></li>
+            <li><a class="child" href="#section">Receiver Installation</a></li>
+            <li><a class="child" href="#section">Load Balancer Requirements</a></li>
+            <li><a class="child" href="#section">Deployment Options<br/>(Single Thread or Multithread)</a></li>
+          </ul>
+        </li>
+
+        <li >
+          <a href="#Submenu" data-toggle="collapse" class="heading">Enterprise Manager Console & Management Guide	</a>
+          <ul  class="collapse list-unstyled" id="Submenu">
+            <li><a class="child" href="#compatiblity">Process Management</a>
+            <li><a class="child" href="#section">Adding the Business Process</a></li>
+            <li><a class="child" href="#section">Executing a Business Process</a></li>
+            <li><a class="child" href="#section">Worker Management</a></li>
+            <li><a class="child" href="#section">Worker List</a></li>
+            <li><a class="child" href="#section">Schedules</a></li>
+            <li><a class="child" href="#section">Trigger</a></li>
+            <li><a class="child" href="#section">Execution Target</a></li>
+            <li><a class="child" href="#section">Actions</a></li>
+            <li><a class="child" href="#section">Account Management</a></li>
+            <li><a class="child" href="#section">Organization</a></li>
+            <li><a class="child" href="#section">User Management</a></li>
+            <li><a class="child" href="#section">Secret Vault</a></li>
+            <li><a class="child" href="#section">Credentials</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#RPAstudio" data-toggle="collapse" class="heading">RPA studio User  Guide	</a>
+          <ul  class="collapse list-unstyled" id="RPAstudio">
+            <li><a class="child" href="#compatiblity">Studio Guide</a>
+            <li><a class="child" href="#section">Menu Bars</a></li>
+            <li><a class="child" href="#section">Play</a></li>
+            <li><a class="child" href="#section">Action Library Panel</a></li>
+            <li><a class="child" href="#section">Stage Category</a></li>
+            <li><a class="child" href="#section">Desktop Automation</a></li>
+            <li><a class="child" href="#section">	Web Automation</a></li>
+            <li><a class="child" href="#section">General</a></li>
+            <li><a class="child" href="#section">Programming</a></li>
+            <li><a class="child" href="#section">Mail Integration</a></li>
+            <li><a class="child" href="#section">Cognitive</a></li>
+            <li><a class="child" href="#section">Developer Panel</a></li>
+            <li><a class="child" href="#section">Properties Panel</a></li>
+            <li><a class="child" href="#section">Variable Panel</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#Actions" data-toggle="collapse" class="heading">RPA Studio Actions Guide	</a>
+          <ul  class="collapse list-unstyled" id="Actions">
+            <li><a class="child" href="#compatiblity">Stage</a>
+            <li><a class="child" href="#section">	Desktop Automation</a></li>
+            <li><a class="child" href="#section">Web Automation</a></li>
+            <li><a class="child" href="#section">General</a></li>
+            <li><a class="child" href="#section">Programming</a></li>
+            <li><a class="child" href="#section">Mail Integration</a></li>
+          </ul>
+        </li>
+            <li><a class="heading" href="#compatiblity">Design a Bot for Best Practices & Guidelines</a></li>
+            <li><a class="heading" href="#compatiblity">Cognitive</a></li>
+        </li>
+      </ul>
+    </nav>
+    <div class="col-sm-9 col-8" style="background-color:#fff;margin-left:30%;max-width: 65%;background-color:#fff;box-shadow: 0 0 49px 0 rgba(0, 0, 0, 0.06);">
+      <div id="" style="background-color:#fff;height:40px">
+        <!-- <h1>Section 2</h1>
+        <p>Try to scroll this section and look at the navigation list while scrolling!</p> -->
+      </div>
+      <div id="compatiblity" style="">
+        <h3><b> OS COMPATIBILTY</b></h3>
+
+        <h5 style="margin-top: 20px;margin-bottom:20px;"><b>Bot Designer: </h5>
+         <table style="border: 1px solid black;border-collapse: collapse; width:65%;height:100%;margin-left:20%;">
+            <tr>
+              <th class="Designer">On-Premise</th>
+              <td class="Designer" >GCP</td>
+              <td class="Designer" >MS Azure</td>
+              <td class="Designer" >AWS</td>
+            </tr>
+            <tr>
+              <th class="bot">Windows 10 /<br /> Windows Server <br /> 2012 R2 / Windows<br/ > Server  2016</th>
+              <td class="bot">Windows Server 2012 R2 Data Center Core / Windows Server 2012 R2 Datacenter / Windows Server 2016 Data Center / Windows Server 2016 Datacenter Core</td>
+              <td class="bot">Windows Server 2012 R2 Data Center / Windows 10 Pro Ver 1809, 1803 / Windows Server 2016 Data Center</td>
+              <td class="bot">Microsoft Windows Server 2016 Base/ Microsoft Windows Server 2012 R2 Base</td>
+            </tr>
+        </table>
+
+       <h5 style="margin-top: 20px;margin-bottom:20px;"><b>Enterprise Manager Console:</b></h5>
+       <table style="border: 1px solid black;border-collapse: collapse; width:65%;height:100%;margin-left:20%;">
+          <tr>
+            <th class="Designer">On-Premise</th>
+            <td class="Designer" >GCP</td>
+            <td class="Designer" >MS Azure</td>
+            <td class="Designer" >AWS</td>
+          </tr>
+          <tr>
+            <th class="bot">Windows 10 /<br /> Windows Server <br /> 2012 R2 / Windows<br/ > Server  2016 / Ubuntu 16.04 LTS / Red Hat Linux 7</th>
+            <td class="bot">Windows Server 2012 R2 Data Center Core / Windows Server 2012 R2 Datacenter / Windows Server 2016 Data Center / Windows Server 2016 Datacenter Core / Ubuntu 16.04 LTS / Red Hat Linux 7</td>
+            <td class="bot">Windows Server 2012 R2 Data Center / Windows 10 Pro Ver 1809, 1803 / Windows Server 2016 Data Center // Ubuntu 16.04 LTS / Red Hat Linux 7.6</td>
+            <td class="bot">Microsoft Windows Server 2016 Base/ Microsoft Windows Server 2012 R2 Base / Red Hat Enterprise Linux 8</td>
+          </tr>
+      </table>
 
 
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
-        {{ content }}
+      <h5 style="margin-top: 20px;margin-bottom:20px;"><b>Worker: </b></h5>
+      <table style="border: 1px solid black;border-collapse: collapse; width:60%;height:100%;margin-left:25%;">
+         <tr>
+           <th class="Designer">On-Premise</th>
+           <td class="Designer" >GCP</td>
+           <td class="Designer" >MS Azure</td>
+           <td class="Designer" >AWS</td>
+         </tr>
+         <tr>
+           <th class="bot">Windows 10 / Windows Server 2012 R2 / Windows Server  2016</th>
+           <td class="bot">Windows Server 2012 R2 Data Center Core / Windows Server 2012 R2 Data Center / Windows Server 2016 Data Center / Windows Server 2016 Data Center Core</td>
+           <td class="bot">Windows Server 2012 R2 Data Center / Windows 10 Pro Ver 1809, 1803 / Windows Server 2016 Data Center</td>
+           <td class="bot">Microsoft Windows Server 2016 Base/ Microsoft Windows Server 2012 R2 Base</td>
+         </tr>
+     </table>
+      </div>
 
-      </section>
-      <footer>
-        {% if site.github.is_project_page %}
-          <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-      </footer>
+      <div id="Minimum" style="background-color:#fff;">
+        <h3 style="text-align:left;margin-top: 30px;margin-bottom:30px;"><b> Minimum Hardware Requirements: </b></h3>
+        <table style="border: 1px solid black;border-collapse: collapse; width:60%;height:100%;margin-left:5%;">
+           <tr>
+             <th class="Designer"> Hardware</th>
+             <td class="Designer" >Bot Designer</td>
+             <td class="Designer" >Worker</td>
+             <td class="Designer" >Enterprise Manager Console</td>
+             <td class="Designer" >Microsoft SQL Server</td>
+             <td class="Designer" >PostgreSQL Server</td>
+           </tr>
+           <tr>
+             <th class="bot"><b>Processor</b></th>
+             <td class="bot">Intel Core i5 2.6 GHz</td>
+             <td class="bot">Intel Core i5 2.6 GHz</td>
+             <td class="bot">8 core - 3.0 GHz Intel Xeon Platinum processor (Turbo Boost to 3.5 GHz)</td>
+              <td class="bot">4 core Intel Xeon Processor</td>
+               <td class="bot">2 core Intel Xeon Processor</td>
+           </tr>
+           <tr>
+             <th class="bot"><b>RAM</b></th>
+             <td class="bot">8 GB</td>
+             <td class="bot">8 GB</td>
+             <td class="bot">16 GB</td>
+              <td class="bot">8 GB</td>
+               <td class="bot">4 GB</td>
+           </tr>
+           <tr>
+             <th class="bot"><b>Storage</b></th>
+             <td class="bot">10 GB</td>
+             <td class="bot">10 GB</td>
+             <td class="bot">50 GB</td>
+              <td class="bot">50 GB</td>
+               <td class="bot">10 GB</td>
+           </tr>
+           <tr>
+             <th class="bot"><b>Network</b></th>
+             <td class="bot">1 GbE</td>
+             <td class="bot">1 GbE</td>
+             <td class="bot">10 GbE</td>
+              <td class="bot">1 GbE</td>
+               <td class="bot">1 GbE</td>
+           </tr>
+           <tr>
+             <th class="bot"><b>Other</b></th>
+             <td class="bot">Microsoft .NET Framework 4.6 (Windows 8.1 and Windows Server 2012 R2: 4.6.1)</td>
+             <td class="bot">Microsoft .NET Framework 4.6 (Windows 8.1 and Windows Server 2012 R2: 4.6.1)</td>
+             <td class="bot">Microsoft .NET Framework 4.6 (Windows 8.1 and Windows Server 2012 R2: 4.6.1)</td>
+              <td class="bot">Microsoft SQL Server 2012 or later</td>
+               <td class="bot">PostgreSQL Server</td>
+           </tr>
+       </table>
+      </div>
+
+      <div id="Installing RPA Studio" >
+       <h3 style="text-align:left;margin-top: 30px;margin-bottom:30px;">Installing RPA Studio</h3>
+       <div style="padding-left:20%;">
+        <div style="margin-top: 20px;margin-bottom:20px;">RPA studio requires 945 MB hard disk space to install.</div>
+        <div style="margin-top: 20px;margin-bottom:20px;">After downloading the RPA studio, move the downloaded studio.exe file to the desired folder where it needs to be installed.</div>
+        <div style="margin-top: 20px;margin-bottom:20px;">Right-click on the installer and select “Run as administrator” so that RPA studio will have “Admin” privileges.</div>
+        <div style="margin-top: 20px;margin-bottom:20px;">The following image is an example of how to run as administrator.</div></div>
+
+      <img src="../assets/images/L1Q5vt.png" style="width:90%;padding-left: 20%;"/>
+      <div style="margin-top: 20px;margin-bottom:20px;padding-left: 20%;">Windows will ask for permission stating “Do you want to allow the unknown publisher to install the application”. Click on YES,  and the installation process will start.</div>
+        <div style="margin-top: 20px;margin-bottom:20px;padding-left: 20%;"> Accept the license agreement of Techforce.ai to proceed for the further installation process.</div>
+        <img src="../assets/images/3O0zsC.png" style="width:90%;padding-left: 20%;"/>
+      <div style="margin-top: 20px;margin-bottom:20px;padding-left: 20%;">The installation process will show the folder selection screen.</div>
     </div>
 
-    {% if site.google_analytics %}
+
+
+
+      <div id="RPA Studio & Worker/Runtime" >
+        <h3 style="text-align:left;margin-top: 30px;margin-bottom:30px;"><b>RPA Studio & Worker/Runtime</b></h3>
+
+         <h5 style="margin-top: 20px;margin-bottom:20px;padding-left:10%;">How to download Techforce.ai RPA studio</h5>
+         <p style="padding-left:20%;margin-bottom:20px;">To download Techforce.ai RPA studio, <br/> click on the below URL. The file size would be around 330 MB.</p>
+         <a href="https://github.com/digitamizers/techforce-ide/releases/download/v1.0.0-alpha.39/techforceide-install-v1.0.0-alpha.39.exe" style="padding-left:20%;width:300px;">https://github.com/digitamizers/techforce-ide/releases<br/><span style="padding-left:20%;">/download/v1.0.0-alpha.39/techforceide-install-v1.0.0</span><br/><span style="padding-left:20%;">-alpha.39.exe</span></a>
+      </div>
+      <div id="section42" >
+
+      </div>
+    </div>
+  </div>
+  </div>
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -44,7 +273,15 @@
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
         ga('create', '{{ site.google_analytics }}', 'auto');
         ga('send', 'pageview');
+
+        $(document).ready(function () {
+
+    $('#sidebarCollapse').on('click', function () {
+        $('#sidebar').toggleClass('active');
+    });
+
+});
       </script>
-    {% endif %}
+
   </body>
 </html>
