--- a/_sass/jekyll-theme-leap-day.css
+++ b/_sass/jekyll-theme-leap-day.css
@@ -605,28 +605,11 @@ nav {
 body {
   position: relative;
 }
-ul.nav-pills {
-  /* top: 20px; */
-  position: fixed;
-  margin-top: 3%;
-}
+
 div.col-8 div {
   height: 500px;
 }
-header {
-  margin: 0;
-  position: fixed;
-  top: 0;
-  left:0;
-  right:0;
-  width: 100%;
-  text-align: center;
-  background: url(../images/background.png) #4276b6;
-  box-shadow: 1px 0px 2px rgba(0,0,0,.75);
-  z-index:99;
-  -webkit-font-smoothing:antialiased;
 
-}
 .nav-item{
   margin-top: 10%;
 }
@@ -648,26 +631,18 @@ header {
 .child:hover{
   text-decoration: none;
 }
-.content{
-  background-color:#fff;
-  margin-left:30%;
-  max-width: 65%;
-}
-.Designer{
-  border: 1px solid black;
-  border-collapse: collapse;
-  padding: 10px;
-  text-align: left;
-  background: #02ce9d;
-  font-weight: 600;
-  color:white;
+
+.Designer {
+    border: 1px solid #e6e6e6;
+    border-collapse: collapse;
+    padding: 10px;
+    text-align: left;
+    font-weight: 500;  padding: 15px;
 }
 .bot{
-  border: 1px solid black;
+  border: 1px solid #e6e6e6;  padding: 15px;
   border-collapse: collapse;
-  font-size: 13px;
-  text-align: left;
-  font-weight: 200;
+  font-weight: normal;
 }
 h5{
   margin-left: 30px;
@@ -676,4 +651,240 @@ h5{
 }
 div.col-8 div{
   height: auto;
+}
+
+
+
+
+/**** CSS ****/
+ul, ol{margin:0;}
+body,html{min-height:100%}
+*,:after,:before{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;-o-box-sizing:border-box;-ms-box-sizing:border-box}
+img{vertical-align:middle;max-width:100%}
+p{font-size:16px;line-height:1.38;color:#8c9298;font-weight:300;margin:0 0 10px 0}
+h1,h2,h3,h4,h5,h6{color:#333;font-weight:700;margin:0;margin-bottom:10px}
+.h1,h1{font-size:40px;line-height:1.35;color:#000}
+.h2,h2{font-size:40px;line-height:1.43}
+.h3,h3{font-size:24px;line-height:2.17}
+.h4,h4{font-size:22px;line-height:30px}
+.h5,h5{font-size:20px;line-height:1.75}
+.h6,h6{font-size:18px}ol,ul{margin:0;padding:0;line-height:normal;list-style-type:none}
+ol ol,ol ul,ul ol,ul ul{margin-bottom:0;line-height:normal}
+.list-unstyled{padding-left:0;list-style:none}
+a{color:#02ce9d;text-decoration:none;cursor:pointer;cursor:pointer}
+a:focus,a:hover{text-decoration:none!important;outline:0;color:#00bf91}
+button{cursor:pointer}
+button:focus,button:focus{outline:0}
+html[xmlns] .clearfix{display:block}
+.clearfix:after, .row:after{display:block;clear:both;content:""}
+.btn:focus{outline:0}
+.btn.blue-btn,.btn.green-btn{min-width:130px;height:50px;-webkit-box-shadow:0 3px 18px 0 rgba(0,0,0,.06);box-shadow:0 3px 18px 0 rgba(0,0,0,.06);background-color:#02ce9d;border-radius:5px;color:#fff;position:relative;overflow:hidden;padding:14px 10px;text-transform:uppercase;font-weight:300;transition:all ease-in-out .3s;cursor:pointer}
+.btn.green-btn:focus,.btn.green-btn:hover{background:#00bf91}
+.header .navbar-inverse .navbar-nav>li>.btn.green-btn:hover{background:#00bf91;color:#fff}
+.navbar-inverse .navbar-nav.navbar-right>li>a{color:#00bf91}
+.header .navbar-inverse .navbar-nav>li>.btn.green-btn{background:rgba(255,255,255,.14);letter-spacing:.28px;text-transform:uppercase;font-size:14px;border:1px solid rgba(255,255,255,.14);padding:0;font-weight:500;line-height:48px;color:#02ce9d}
+.btn.green-btn.btn-outlined:after{border-bottom-color:rgba(2,206,157,.25)}
+.btn.green-btn.btn-outlined:focus,.btn.green-btn.btn-outlined:hover,.navbar-inverse .navbar-nav>li>a.btn.btn-outlined.green-btn:focus,.navbar-inverse .navbar-nav>li>a.btn.btn-outlined.green-btn:hover{background:#02ce9d;color:#fff}
+a.btn.btn-outlined.green-btn{background:#fff;color:#02ce9d;border-color:#02ce9d}
+.btn.green-btn:focus,.btn.green-btn:hover{background:#00bf91;color: #fff;}
+/******* ~~ Body CSS ~~ *******/
+body{position:relative;margin:0;font-style:normal;font-stretch:normal;line-height:1.38;background:#fff;color:#8c9298;font-family:Roboto,sans-serif !important;font-weight:400;overflow:hidden;overflow-y:auto;width:100%;}
+header.blue-header{position:absolute;left:0;top:0;width:100%;z-index:1;padding:30px 0 10px 0}
+.blue-header .cols{float:none;display:inline-block;vertical-align:middle;margin:0 -2px}
+.blue-header .logo img{width:198px}
+canvas{display:block;vertical-align:bottom}
+.blue-banner{background-image:linear-gradient(283deg,#3a40c7,#0f75f0);height:290px;position:relative;overflow:hidden;background-position:center}
+body.innerPages{padding:0}
+header.blue-header{position:absolute;left:0;top:0;width:100%;z-index:1;padding:30px 0 10px 0}
+.blue-header .cols{float:none;display:inline-block;vertical-align:middle;margin:0 -2px; width: 50%;}
+.blue-header .logo img{width:198px}
+header.blue-header ul li a{color:#fff;text-transform:uppercase;font-weight:300}
+.btn.blue-btn{background-color:#2c63d6;-webkit-box-shadow:none;box-shadow:none}
+.btn.blue-btn:hover{background:#3a40c7;color: #fff;}
+.blue-banner-content h1{margin:0;font-weight:400;color:#fff}
+.blue-banner #particles-js{width:100%;height:100%}
+.breadcrumbBox .breadcrumb{width:auto;background:0 0;margin:0;padding:0}
+.breadcrumbBox .breadcrumb a,.breadcrumbBox .breadcrumb li{color:#fff;opacity:.66;letter-spacing:.3px;font-size:13px;font-weight:300;}
+.breadcrumbBox .breadcrumb li:before{margin-right:3px}
+.breadcrumbBox .breadcrumb li.active,.breadcrumbBox .breadcrumb li.active a{opacity:1}
+.breadcrumbBox .breadcrumb>li+li:before{content:">";padding:0}
+.searchBox{max-width:716px;margin:-115px auto 0;position:relative}
+.searchBox:before{position:absolute;left:40px;top:50%;content:"";background:url(../assets/images/search-icon.svg) no-repeat;width:16px;height:16px;margin-top:-7px}
+.searchBox input{height:70px;border-radius:4px;-webkit-box-shadow:0 5px 57px 0 rgba(35,57,149,.07);box-shadow:0 5px 57px 0 rgba(35,57,149,.07);background-color:#fff;border:none;border-right:5px;padding-left:70px;padding-right:160px}
+.searchBox .btn.green-btn{position:absolute;border-radius:0 5px 5px 0;-webkit-box-shadow:none;box-shadow:none;height:100%;right:0;width:149px;top:0}
+.searchBox input::-webkit-input-placeholder{font-size:16px;font-weight:300;color:#666;letter-spacing:.5px}
+.searchBox input::-moz-placeholder{font-size:16px;font-weight:300;color:#666;letter-spacing:.5px}
+.searchBox input:-ms-input-placeholder{font-size:16px;font-weight:300;color:#666;letter-spacing:.5px}
+.searchBox input:-moz-placeholder{font-size:16px;font-weight:300;color:#666;letter-spacing:.5px}
+.greyBg{background:#f2f5f6}
+.allTopic{padding-top:80px}
+.documentTabCLick li a{display:block;font-size:16px;font-weight:400;line-height:22px;color:#999;border:none;-webkit-box-shadow:none;box-shadow:none;padding:14px 0 14px 30px;border-radius:0}
+
+.documentTabCLick .nav-tabs li{float:none}
+.documentTabCLick li a:focus,.documentTabCLick li.active a,.documentTabCLick li:focus{font-weight:500;border:none!important;-webkit-box-shadow:none;box-shadow:none}
+.doc-data h3{font-size: 40px; font-weight: 500; line-height: 1.13; text-transform:capitalize;color: #000000;margin:0 0 20px 0}
+.doc-data p{font-size:16px;font-weight:400;line-height:1.88;color:#999;margin-bottom:30px}
+.doc-data h5{font-size: 16px; font-weight: 500; line-height: 1.88; color: #333333;margin:0 0 20px 0;}
+.rateUs.greyBg .ratingBoxMain{background:#fff;padding:150px 0 50px}
+.rateUs.greyBg .ratingBoxMain:after{top:65px}.doc-data img{width:100%}
+.documentation{margin-top:60px;padding-bottom: 70px;}
+/****Give Rate***/
+.giveRate li{padding:0 10px;display: inline-block;
+    vertical-align: top;}
+.ratingBoxMain{padding-top:80px;position:relative}
+.ratingBoxMain:after{position:absolute;left:50%;top:0;-webkit-transform:translateX(-50%);transform:translateX(-50%);background:url(../images/rating-hand.svg) no-repeat;content:"";width:245px;background-position:center top;height:245px}
+.giveRate li a{color:#e4e4e4;font-size:25px;width:53.9px;height:53.9px;border-radius:4px;border:solid 1px #e4e4e4;background-color:#fff;color:#e4e4e4;line-height:53.9px;display:inline-block}
+.giveRate li.given a{background:#02ce9d;color:#fff;border-color:#02ce9d}
+.giveRate{margin-top:40px}
+.rateUs .main-heading{margin-bottom:15px;font-weight:500}
+.rateUs{padding:80px 0 80px}
+.rateUs p{font-size:16px;font-weight:500;line-height:1.88;color:#999}
+.blueFooter p{font-size:9px;letter-spacing:.2px;color:#666}
+.blueFooter{border-top:1px solid #e4e4e4;text-align:center;padding:10px 0}
+
+#sidebar.fixed {
+    position: fixed;
+    top: 0;width:26%;
+}
+.doc-data table{width: 100%;border-collapse: collapse;    border: 1px solid #e6e6e6;margin-bottom: 30px;}
+.doc-data h4 {
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 25px;
+    color: #333333;
+    position: relative;
+    padding-left: 21px;
+    margin: 0 0 30px 0;padding-top: 5px;
+}
+.doc-data h4:before{position: absolute;left: 0; top: 5px;content: "";  width: 3px;background-color: #ffa429;height: 100%;}
+.doc-data h4.blue:before{background-color: #008be2}
+/**** RESPONSIVE*****/
+@media (max-width: 1270px){
+.blueBanner-parent {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 100%;
+    padding: 0 15px;
+}
+.blueBanner-parent {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 100%;
+    padding: 0 15px;
+}
+.blueBanner-parent .breadcrumbBox .breadcrumb{justify-content: center}
+}
+.row.no-flex{display: block}
+.topicTop-heading .cols .colsIn .btn-group.bootstrap-select{width:88px;height:40px}
+.customSelect .bootstrap-select>.btn{border:none;height:100%;
+ width: 151px;
+  height: 40px;
+  border-radius: 3px;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.04);
+  border: solid 1px #e4e4e4;font-weight: 500;
+    color: #333;
+    font-size: 14px;}
+.customSelect .btn-group.open .dropdown-toggle, .customSelect .bootstrap-select>.btn:focus, .customSelect .bootstrap-select>.btn:hover{background:#fff;-moz-box-shadow:none;outline:0;-webkit-box-shadow:none;box-shadow:none}
+.customSelect .bootstrap-select.btn-group .dropdown-menu{border:none}
+.customSelect .bootstrap-select.btn-group .btn .caret,.topicTop-heading .bootstrap-select.btn-group .btn .caret{border:none}
+.customSelect .bootstrap-select.btn-group .btn .caret:after,.topicTop-heading .bootstrap-select.btn-group .btn .caret:after{content:"";font-family:FontAwesome;position:absolute;right:0;top:50%;-webkit-transform:translateY(-50%);transform:translateY(-50%)}
+.documentTabCLick .nav-pills>li{float: none;}
+.documentTabCLick .nav-pills{margin-top: 35px; position: relative;border-left:2px solid #f7f7f7;}
+.documentTabCLick .nav-pills>li>a {
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 1.88;
+    letter-spacing: normal;
+    color: #333333;
+    padding: 8px 0 8px 30px; background: transparent;border-radius: 0;position: relative;
+}
+.documentTabCLick .nav-pills>li>a:before{position: absolute;left: -2px; top: 0;content: ""; width: 2px;height: 100%;background: #02ce9d;opacity: 0;}
+.documentTabCLick .nav-pills > li > a:focus:before, .documentTabCLick .nav-pills > li >.active a:before, .documentTabCLick .nav-pills > li >:focus:before{
+  opacity: 1;
+}
+.documentTabCLick .nav-pills>li>a:hover{background: transparent;}
+.documentTabCLick .nav-pills>li>a:focus{font-weight: 500;background: transparent;}
+.documentTabCLick .nav-pills>li ul li a{  
+     font-size: 14px;
+    font-weight: normal;
+    line-height: 24px;
+    color: #666666;
+    padding: 4px 10px 4px 25px;}
+@media (min-width: 1271px) {
+    .blue-banner-content, .breadcrumbBox {position: absolute; bottom: 70px; left: 50%; -moz-transform: translateX(-50%); -webkit-transform: translateX(-50%); transform: translateX(-50%); color: #fff; width: 100%; }
+    .breadcrumbBox {bottom: 18px; }
+    .rpa .logo_section p {max-width:82%; }
+    .breadcrumbBox {bottom: 18px; }
+}
+@media (max-width: 991px){
+.container {
+    width: auto; max-width: inherit !important;
+}
+.blue-header .logo img {
+    width: 100px;
+}
+header.blue-header .btn.blue-btn {
+    min-width: inherit;
+    height: 40px;
+    padding: 0 10px;
+    line-height: 40px;
+}
+header.blue-header {
+    padding: 15px 0 10px 0;
+}
+}
+@media (max-width: 767px){
+.searchBox input {
+    height: 50px;
+    padding-left: 40px;
+    padding-right: 90px;
+}
+.searchBox .btn.green-btn {
+    width: 80px;
+    min-width: inherit;
+}
+.blue-banner-content h1 {
+    font-size: 30px;
+    line-height: 30px;
+}
+.searchBox input {
+    height: 50px;
+    padding-left: 40px;
+    padding-right: 90px;
+}
+.searchBox:before {
+    left: 15px;
+    margin-top: -8px;
+}
+}
+@media (max-width: 620px){
+.blue-banner-content h1 {
+    font-size: 28px;
+    line-height: 28px;
+}
+}
+@media (max-width: 479px){
+.blue-banner {
+    height: 250px;
+}
+}
+@media (max-width: 400px){
+.blue-banner-content h1 {
+    font-size: 26px;
+    line-height: 26px;
+}
+}
+@media (max-width: 390px){
+.blue-banner-content h1 {
+    font-size: 20px;
+    line-height: 24px;
+}
 }
