--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="row no-flex">
                     <div class="col-sm-5 cols">
-                        <a href="index.html" class="logo"><img src="/assets/images/techforce-logo.png" alt="Techforcer"></a>
+                        <a href="index.html" class="logo"><img src="{{ '/assets/images/techforce-logo.png' | relative_url }}" alt="Techforcer"></a>
                     </div>
                     <div class="col-sm-7 text-right cols">
                         <ul class="list-unstyled">
@@ -355,7 +355,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.10/js/bootstrap-select.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script>
-    <script src="/assets/js/custom.js"></script>
+    <script src="{{ '/assets/js/custom.js' | relative_url }}"></script>
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
