--- a/_sass/jekyll-theme-leap-day.css
+++ b/_sass/jekyll-theme-leap-day.css
@@ -804,6 +804,18 @@ div#sidebar {overflow: hidden; position: relative }
 .doc-data strong.blue{color: #008be2;}
 .doc-data .orange{color: #ffc015}
 .darkBlue{color: #008be2}
+.diamondList li{position: relative}
+.diamondList li:before{width: 9.9px;
+  height: 9.9px;
+  background-color: #02ce9d;left: 0;top:8px;content: '';position: absolute;-webkit-transform: rotate(45deg);transform: rotate(45deg);}
+  ul.diamondList {
+    margin-top: 15px;
+}
+.doc-data h6{
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.67;
+  color: #333333;margin:25px 0 20px;}
 /**** RESPONSIVE*****/
 
 @media (min-width: 1271px) {
