--- a/_sass/jekyll-theme-leap-day.css
+++ b/_sass/jekyll-theme-leap-day.css
@@ -602,17 +602,6 @@ nav {
     width:auto;
   }
 }  */
-body {
-  position: relative;
-}
-
-div.col-8 div {
-  height: 500px;
-}
-
-.nav-item{
-  margin-top: 10%;
-}
 .heading{
   text-decoration:none;
   font-size:16px;
@@ -644,14 +633,14 @@ div.col-8 div {
   border-collapse: collapse;
   font-weight: normal;
 }
-h5{
+/* h5{
   margin-left: 30px;
   font-size: 10px;
   margin-top: 10px;
 }
 div.col-8 div{
   height: auto;
-}
+} */
 
 .wrapper{
   width: 0px;
