--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,9 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
     <style>
+    .wrapper{
+      width: 0px;
+    }
 
     ul, ol{margin:0;}
     body,html{min-height:100%}
@@ -623,28 +626,28 @@
                                    <li>
                                     <span class="numbers">3.</span> Windows will ask for permission stating “<strong>Do you want to allow the unknown publisher to install the application”</strong>. Click <strong>YES</strong>,  and the installation process will start. </li>
                                     <li><span class="numbers">4.</span> Accept the license agreement of Techforce.ai to proceed for the further installation process.
-                                    <img src="../assets/images/doc-img2.png" alt="image">
+                                    <img src="{{ '/assets/images/doc-img2.png' | relative_url }}" alt="image">
                                     The installation process will show the folder selection screen.
                                     </li>
                                     <li><span class="numbers">5.</span> Click on <strong>BROWSE</strong> and select a folder which does not contain a space in its name like shown in the image.
-                                      <img src="../assets/images/doc-img3.png" alt="image">
+                                      <img src="{{ '/assets/images/doc-img3.png' | relative_url }}" alt="image">
                                     </li>
                                     <li><span class="numbers">6.</span> After selecting the folder, click on <strong>“INSTALL”</strong> which will start installing RPA studio.
-                                      <img src="../assets/images/doc-img4.png" alt="image">
+                                      <img src="{{ '/assets/images/doc-img4.png' | relative_url }}" alt="image">
                                       <blockquote>
                                         <div>
-                                          <img src="../assets/images/idea.svg" alt="image">
+                                          <img src="{{ '/assets/images/idea.svg' | relative_url }}" alt="image">
                                           TIP
                                         </div>
                                         <p>On the folder selection screen, make sure to select a folder, which does not contain any space in the folder name. If the selected folder contains any space in its name, then the RPA scripts built using the studio cannot be executed.</p>
                                       </blockquote>
                                     </li>
                                     <li><span class="numbers">7.</span> The installation will take a bit time, and after installing the Studio, click on <strong>CLOSE</strong> button to proceed for further process.
-                                      <img src="../assets/images/doc-img5.png" alt="image">
+                                      <img src="{{ '/assets/images/doc-img5.png' | relative_url }}" alt="image">
                                       RPA studio installer will prompt to download a dependency file. Install the dependency file.
                                     </li>
                                     <li><span class="numbers">8.</span> Click on the <strong>“OK”</strong> button as shown in the above image, to install Techforce OCR, which is a dependency to RPA studio.
-                                    <img src="../assets/images/doc-img6.png" alt="image"></li>
+                                    <img src="{{ '/assets/images/doc-img6.png' | relative_url }}" alt="image"></li>
                                  </ol>
                             </div>
                             <div id="ocr3"  class="page-section">
@@ -652,7 +655,7 @@
                               <p>Techforce OCR needs <strong>164MB</strong> of hard disk space for installation.</p>
                               <ol>
                                 <li><span class="numbers">1.</span> In the first screen of Techforce OCR installation, select preferred language, <br>and click <strong>“OK”</strong> which will start the installation of Techforce OCR.
-                                <img src="../assets/images/doc-img7.png" alt="image">
+                                <img src="{{ '/assets/images/doc-img7.png' | relative_url }}" alt="image">
                                 </li>
                                 <li>
                                   <span class="numbers">2.</span> In the next screen of OCR installation, click <strong>NEXT</strong> to continue the installation process.
@@ -660,23 +663,23 @@
                                 </li>
                                 <li>
                                   <span class="numbers">3.</span> Accept the license agreement of Techforce OCR to <strong>continue</strong> the installation process.
-                                  <img src="../assets/images/doc-img8.png" alt="image">
+                                  <img src="{{ '/assets/images/doc-img8.png' | relative_url }}" alt="image">
                                 </li>
                                 <li>
                                  <span class="numbers">4.</span> After accepting the agreement, specify/select who should have the user level <br>access to OCR Select appropriately from. <strong>“Install for anyone using this computer or Install just for me”</strong>.
-                                  <img src="../assets/images/doc-img9.png" alt="image">
+                                  <img src="{{ '/assets/images/doc-img9.png' | relative_url }}" alt="image">
                                 </li>
                                 <li>
                                 <span class="numbers">5.</span> Select any one of the options and click on <strong>NEXT</strong> button. In the next screen choose the components that are to be installed or else just click on <strong>NEXT</strong> to continue the installation process.
-                                  <img src="../assets/images/doc-img10.png" alt="image">
+                                  <img src="{{ '/assets/images/doc-img10.png' | relative_url }}" alt="image">
                                 </li>
                                 <li>
                                 <span class="numbers">6.</span> After selecting the components, the installation process will show the folder path selection. Keep the default storage space or else specify the installation folder.
-                                  <img src="../assets/images/doc-img11.png" alt="image">
+                                  <img src="{{ '/assets/images/doc-img11.png' | relative_url }}" alt="image">
                                 </li>
                                 <li><span class="numbers">7.</span> Select the options for start menu action and then click on <strong>Install</strong> to.</li>
                                 <li>8. After installation, click on <strong>NEXT</strong> button and then click on <strong>FINISH</strong> button to complete the RPA Studio installation
-                                <img src="../assets/images/doc-img12.png" alt="image">
+                                <img src="{{ '/assets/images/doc-img12.png' | relative_url }}" alt="image">
                                 </li>
                               </ol>
                             </div>
