--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -154,7 +154,12 @@
    .rateUs{padding:80px 0 80px}
    .rateUs p{font-size:16px;font-weight:500;line-height:1.88;color:#999}
    .blueFooter p{font-size:9px;letter-spacing:.2px;color:#666}
-   .blueFooter{border-top:1px solid #e4e4e4;text-align:center;padding:10px 0}
+   .blueFooter{
+     position:fixed;
+     border-top:1px solid #e4e4e4;
+     text-align:center;
+     padding:10px 0;
+   }
 
    .documentTabCLick .nav-pills.fixed {position: fixed; top: 0;width:26.7%; }
    .doc-data table{width: 100%;border-collapse: collapse;    border: 1px solid #e6e6e6;margin-bottom: 5px;}
