--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
     width: 100%;
     border-top: 1px solid #e4e4e4;
   }
-   ul, ol{margin:0;list-style-type:none;}
+   ul, ol{margin:0;}
    body,html{min-height:100%}
    *,:after,:before{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;-o-box-sizing:border-box;-ms-box-sizing:border-box}
    img{vertical-align:middle;max-width:100%}
@@ -584,7 +584,54 @@
                       <div class="doc-data col-md-8 col-sm-8">
                         <div id="notes"  class="page-section">
                               <h3><span class="numbers">1.</span> Release Notes</h3>
-                              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                              <h4>Overview</h4>
+                              <h5>1.1. Document Purpose</h5>
+                              <p>This document provides the “what’s new” information for the version  1.5.3 release Techforce RPA studio & EM console </p>
+                              <h5>1.2. Documentation</h5>
+                              <p>Product documentation is available at   <a href="http://docs.techforce.ai/">www.docs.techforce.ai</a></p>
+                              <h4 class="blue">What’s New in this Release</h4>
+                              <h6>1.3. Techforce RPA Studio </h6>
+                              <h5>1.3.1. New Features/Functionality Added  </h5>
+                              <ul class="diamondList">
+                                  <li>variables support in sftp actions</li>
+                                  <li>attachment, cc, bcc support in smtp</li>
+                                  <li>insert columns in excel</li>
+                                  <li>screenshot action</li>
+                                  <li>sign code</li>
+                                  <li>sftp move action</li>
+                                  <li>compile files for release</li>
+                                  <li>iframe, date format, string format actions</li>
+                                  <li>variables support in sftp actions</li>
+                                  <li>attachment, cc, bcc support in smtp</li>
+                                  <li>SMTP Integration </li>
+                                  <li>read table action under web automation</li>
+                                  <li>delete files of a folder action under FTP</li>
+                              </ul>
+                              <h5>1.3.2. Features/Functionality Removed </h5>
+                              <ul class="diamondList">
+                                  <li>admin permission when launching ide</li>
+                              </ul>
+                              <h5>1.3.3. Features/Functionality Modified Fixed </h5>
+                              <ul class="diamondList">
+                                  <li>outlook mail body parsing</li>
+                                  <li>break statement in for loop</li>
+                                  <li>license</li>
+                                  <li>input type to password for orchestrator and worker</li>
+                                  <li>csv header, row issue</li>
+                                  <li>sftp connect and update cred in child actions</li>
+                                  <li>corrupted service binaries</li>
+                                  <li>variable and echo</li>
+                                  <li>variable name support</li>
+                                  <li>smtp</li>
+                                  <li>dirPath variable initialisation</li>
+                                  <li>passing cli parameters</li>
+                                  <li>ftp connect config details</li>
+                              </ul>
+                              <h5>1.3.4. ssues Resolved in V1.5.3 </h5>
+                              <ul class="diamondList">
+                                  <li>SMTP issues</li>
+                              </ul>
+
                           </div>
                           <div id="compatiblity" class="page-section">
                               <h3><span class="numbers">2.</span> Installation Instructions</h3>
