--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,31 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
+
+    <style>
+    body{
+      padding: 0px;
+    }
+    .wrapper{
+      width: 100%;
+      margin:0px;
+    }
+    header{
+     background: none;
+     box-shadow: none;
+    }
+    .child{
+
+    }
+    td:first-child{
+    border-left:1px solid #e5e5e5;
+    }
+    td{
+    border-right:1px solid #e5e5e5;
+    }
+    </style>
 </head>
+
 <body>
   <div class="wrapper">
       <!--Header Start-->
