--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -544,7 +544,7 @@
                         </div> -->
                         <ul class="nav nav-pills flex-column side customScroll"  >
                             <li class="subMenu">
-                                <a href="" class="heading"><span class="numbers">1.</span> Release Notes</a>
+                                <a href="" class="heading"><span class="numbers">1.</span>About Techforce.ai RPA</a>
                                 <ul class="collapse list-unstyled collapse-0">
                                   <li><a class="child 0" href="#notes"><span class="numbers">1.1.</span>Overview</a></li>
                                   <li><a class="child 0" href="#whatsNew"><span class="numbers">1.2.</span>What is new in this release</a></li>
