changes in pssp

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -552,16 +552,20 @@
                                 </ul>
                             </li>
                             <li class="subMenu">
-                                <a href="" class="heading"><span class="numbers">2.</span> Installation Instructions</a>
+                                <a href="" class="heading"><span class="numbers">2.</span> Release Notes</a>
                                 <ul class="collapse list-unstyled collapse-1">
-                                    <li><a class="child 1" href="#compatiblity"><span class="numbers">2.1.</span>  OS Compatibility</a></li>
-                                    <li><a class="child 1" href="#Minimum"><span class="numbers">2.2.</span> Minimum Hardware Requirements</a></li>
+                                    <li><a class="child 1" href="#compatiblity"><span class="numbers">2.1.</span> Patches & Updates</a></li>
+                                    <li><a class="child 1" href="#Minimum"><span class="numbers">2.2.</span>Whats's New</a></li>
                                 </ul>
                             </li>
                            <li class="subMenu">
-                                <a href=""  class="heading"><span class="numbers">3.</span> RPA Studio & Worker/Runtime</a>
+                                <a href=""  class="heading"><span class="numbers">3.</span>Techforce.ai Studio Guide</a>
                                 <ul class="collapse list-unstyled collapse-2">
-                                    <li><a class="child 2" href="#download3"><span class="numbers">3.1.</span> How to download Techforce.ai RPA studio</a></li>
+                                    <li><a class="child 2" href="#download3"><span class="numbers">3.1.</span> Installation</a>
+                                        <ul>
+                                           <li><a class="child 2" href="#download3"><span class="numbers">3.1.</span> Installation</a></li>
+                                        </ul>
+                                    </li>
                                     <li><a class="child 2" href="#install3"><span class="numbers">3.2.</span> Installing RPA Studio</a></li>
                                     <li><a class="child 2" href="#ocr3"><span class="numbers">3.3.</span> Installing Techforce OCR</a></li>
                                 </ul>
