--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,16 +35,16 @@
      background: none;
      box-shadow: none;
    }
-
+.collapse list-unstyled collapse-2 li ul{
+   margin-left: 20px;
+}
    td:first-child{
     border-left:1px solid #e5e5e5;
   }
   td{
     border-right:1px solid #e5e5e5;
   }
-  .child 9{
-    margin-left: 30px;
-  }
+
   .Designer {
       border: 1px solid #e6e6e6;
       border-collapse: collapse;
