changes in csss

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -564,7 +564,7 @@
                                 <ul class="collapse list-unstyled collapse-2">
                                     <li><a class="child 2" href="#download3"><span class="numbers">3.1.</span> Installation</a>
                                         <ul>
-                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.1</span> <span>Software Requirements</span></a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.1</span> <span style="margin-left:10px;">Software Requirements</span></a></li>
                                            <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.2</span> Hardware Requirements</a></li>
                                            <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.3</span> Installation Instructions</a></li>
                                            <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.4</span> Installing Techforce OCR</a></li>
