changes in css1

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -647,24 +647,58 @@
 
                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18</span> <span style="margin-left:5px;">Excel Actions</span></a>
                                           <ul>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.1</span> <span style="margin-left:20px;">Open Spreadsheet</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.2</span> <span style="margin-left:5px;">Get Sheetnames</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.3</span> <span style="margin-left:5px;">Get Column</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.4</span> <span style="margin-left:5px;">Delete Coulmn</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.5</span> <span style="margin-left:5px;">Get Row</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.6</span> <span style="margin-left:5px;">Delete Row</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.7</span> <span style="margin-left:5px;">Get Cell</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.8</span> <span style="margin-left:5px;">Write Cell</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.9</span> <span style="margin-left:5px;">Get Range</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.10</span> <span style="margin-left:5px;">Write Range</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.11</span> <span style="margin-left:5px;">Append Range</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.12</span> <span style="margin-left:5px;">Delete Range</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.13</span> <span style="margin-left:5px;">Get Cell Color</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.14</span> <span style="margin-left:5px;">Set Range Color</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.15</span> <span style="margin-left:5px;">Get Cell Formula</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.16</span> <span style="margin-left:5px;">Filter Column</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.17</span> <span style="margin-left:5px;">Convert to XLSX</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.18</span> <span style="margin-left:5px;">Insert Column</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.1</span> <span style="margin-left:25px;">Open Spreadsheet</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.2</span> <span style="margin-left:25px;">Get Sheetnames</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.3</span> <span style="margin-left:25px;">Get Column</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.4</span> <span style="margin-left:25px;">Delete Coulmn</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.5</span> <span style="margin-left:25px;">Get Row</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.6</span> <span style="margin-left:25px;">Delete Row</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.7</span> <span style="margin-left:25px;">Get Cell</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.8</span> <span style="margin-left:25px;">Write Cell</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.9</span> <span style="margin-left:25px;">Get Range</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.10</span> <span style="margin-left:25px;">Write Range</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.11</span> <span style="margin-left:25px;">Append Range</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.12</span> <span style="margin-left:25px;">Delete Range</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.13</span> <span style="margin-left:25px;">Get Cell Color</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.14</span> <span style="margin-left:25px;">Set Range Color</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.15</span> <span style="margin-left:25px;">Get Cell Formula</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.16</span> <span style="margin-left:25px;">Filter Column</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.17</span> <span style="margin-left:25px;">Convert to XLSX</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.18.18</span> <span style="margin-left:25px;">Insert Column</span></a></li>
+                                          </ul></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.19</span> <span style="margin-left:25px;">Loops (For)</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.20</span> <span style="margin-left:25px;">Techforce OCR</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.21</span> <span style="margin-left:25px;">Files & Folders</span></a>
+                                          <ul>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.21.1</span> <span style="margin-left:25px;">Cteate File/Folder</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.21.2</span> <span style="margin-left:25px;">Write to File</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.21.3</span> <span style="margin-left:25px;">Copy File/Folder</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.21.4</span> <span style="margin-left:25px;">Get Folder Contents</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.21.5</span> <span style="margin-left:25px;">Delete File/Folder</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.21.6</span> <span style="margin-left:25px;">Read File</span></a></li>
+                                          </ul></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.22</span> <span style="margin-left:25px;">FTP & SFTP</span></a>
+                                          <ul>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.22.1</span> <span style="margin-left:25px;">Connect</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.22.2</span> <span style="margin-left:25px;">Get File</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.22.3</span> <span style="margin-left:25px;">Put File</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.22.4</span> <span style="margin-left:25px;">Get Files</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.22.5</span> <span style="margin-left:25px;">Put Files</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.22.6</span> <span style="margin-left:25px;">Delete</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.22.7</span> <span style="margin-left:25px;">Delete Files</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.22.8</span> <span style="margin-left:25px;">Move Remote File</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.22.9</span> <span style="margin-left:25px;">Move Remote Files</span></a></li>
+                                          </ul></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.23</span> <span style="margin-left:25px;">CSV Actions</span></a>
+                                          <ul>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.23.1</span> <span style="margin-left:25px;">CSV Header</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.23.2</span> <span style="margin-left:25px;">CSV Row</span></a></li>
+                                          </ul></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.5</span> <span style="margin-left:25px;">Programming</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.5.1</span> <span style="margin-left:25px;">Variables</span></a>
+                                          <ul>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.5.1.1</span> <span style="margin-left:25px;">String Format</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.5.1.2</span> <span style="margin-left:25px;">Date Format</span></a></li>
                                           </ul></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
@@ -681,10 +715,7 @@
                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+
                                         </ul></li>
                                         </ul>
                                       </li>
